--- a/PressYourLuck/PressYourLuck/PressYourLuck.csproj
+++ b/PressYourLuck/PressYourLuck/PressYourLuck.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameTile.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PressYourLuckForm.cs">
       <SubType>Form</SubType>
     </Compile>
